--- a/app/views/devise/passwords/new.html.haml
+++ b/app/views/devise/passwords/new.html.haml
@@ -6,10 +6,11 @@
     .flash= resource.errors.full_messages.join('<br>').html_safe
   .row.bordered
     = f.label :email, :class => "font"
-    = f.text_field :email, placeholder: 'user@example.com'
+    = f.text_field :email, placeholder: 'user@example.com', :autofocus => true
 
   .row.bordered
     = f.submit "Send reset instructions", class: 'btn btn-info'
+
   .row.bordered
     %p{:style => "text-align: right; margin-top: 10px; font-size: 12px;"}
       = link_to "Sign In", new_user_session_path
