--- a/app/views/tenon/tenon_content/row_types/display/_four_column_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_four_column_text.html.haml
@@ -1,4 +1,4 @@
-.four-column-text.multi-text
+.four-column-text.tn-tc-multi-text
   - row.pieces.each do |piece|
     .tn-tc-piece.three{class: cycle('', '', '', 'omega')}
       = render "tenon/tenon_content/piece_types/display/text", piece: piece
