--- a/app/views/tenon/tenon_content/row_types/display/_six_column_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_six_column_image.html.haml
@@ -2,7 +2,7 @@
   - [ [0, 1], [2, 3], [4, 5] ].each_with_index do |columns, i|
     .tn-tc-piece.four{class: i == 2 ? 'omega' : ''}
       - columns.each do |position|
-        .tn-tc-piece.asset-field.six{class: cycle('', 'omega')}
+        .tn-tc-piece.tn-tc-asset-field.six{class: cycle('', 'omega')}
           - row.pieces.select { |p| p.position == position }.each do |piece|
             = render 'tenon/tenon_content/piece_types/display/image', piece: piece
   .spacer
