--- a/app/views/tenon/tenon_content/row_types/form/_two_column_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/form/_two_column_text.html.haml
@@ -1,4 +1,4 @@
-.two-column-text.multi-text
+.two-column-text.tn-tc-multi-text
   = f.hidden_field :list_order
   = f.hidden_field :row_type
   = f.fields_for :pieces do |piece|
