--- a/app/assets/stylesheets/tenon/ui/asset-attachment.css.scss
+++ b/app/assets/stylesheets/tenon/ui/asset-attachment.css.scss
@@ -1,4 +1,4 @@
-.asset-field {
+.tn-tc-asset-field {
   position: relative;
 
   .thumbnail {
@@ -124,7 +124,7 @@
     display: none;
   }
 
-  .asset-field {
+  .tn-tc-asset-field {
     margin-bottom: 10px;
   }
 }
