--- a/app/views/tenon/tenon_content/row_types/display/_full_width_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_full_width_image.html.haml
@@ -1,4 +1,4 @@
-.full-width-image
-  .tn-tc-piece.twelve.asset-field
+.two-column-text-with-background-image
+  .tn-tc-piece.twelve.tn-tc-asset-field
     = render "tenon/tenon_content/piece_types/display/image", piece: row.pieces.first
   .spacer
