--- a/app/views/tenon/tenon_content/row_types/form/_left_text_right_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/form/_left_text_right_image.html.haml
@@ -1,4 +1,4 @@
-.left-text-right-image.image-and-text
+.tn-tc-left-text-right-image.tn-tc-image-and-text
   = f.hidden_field :row_type
   = f.hidden_field :list_order
   = f.fields_for :pieces do |piece|
@@ -7,6 +7,6 @@
       .tn-tc-piece{class: piece.object.size}
         = render "tenon/tenon_content/piece_types/form/text", f: piece
     - if piece.object.piece_type == "Image"
-      .tn-tc-piece.asset-field.omega{class: piece.object.size}
+      . tn-tc-piece.tn-tc-asset-field.omega{class: piece.object.size}
         = render "tenon/tenon_content/piece_types/form/image", f: piece, style: 'half'
   .spacer
