--- a/app/views/tenon/tenon_content/row_types/form/_six_column_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/form/_six_column_image.html.haml
@@ -4,7 +4,7 @@
   - [ [0, 1], [2, 3], [4, 5] ].each_with_index do |columns, i|
     .four{class: i == 2 ? 'omega' : ''}
       - columns.each do |position|
-        .tn-tc-piece.asset-field.six{class: cycle('', 'omega')}
+        .tn-tc-piece.tn-tc-asset-field.six{class: cycle('', 'omega')}
           = f.fields_for :pieces, f.object.pieces.select{ |p| p.position == position } do |piece|
             = render 'tenon/tenon_content/piece_types/form/image', f: piece, position: piece.object.position
   .spacer
