--- a/app/assets/stylesheets/tenon/layout/util-nav.css.scss
+++ b/app/assets/stylesheets/tenon/layout/util-nav.css.scss
@@ -25,7 +25,7 @@ util-nav {
     display: none;
     text-transform: uppercase;
 
-    @include media($tablet_breakpoint) {
+    @include media($tn-bp-tablet) {
       display: block;
     }
 
