--- a/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
+++ b/app/assets/stylesheets/tenon/ui/tenon-content.css.scss
@@ -163,7 +163,7 @@
     }
   }
   .wrapped-image {
-    @include media($mobile-breakpoint) {
+    @include media($tn-bp-mobile) {
       &.left, &.right {
         float: none;
         padding: 0;
