--- a/app/views/tenon/tenon_content/row_types/display/_four_column_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_four_column_image.html.haml
@@ -1,4 +1,4 @@
-.four-column-image
+.tn-tc-row.four-column-image
   - row.pieces.each do |piece|
     .tn-tc-piece.tn-tc-asset-field.three{class: cycle('', '', '', 'omega')}
       = render "tenon/tenon_content/piece_types/display/image", piece: piece
