--- a/app/views/tenon/tenon_content/row_types/display/_left_text_right_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_left_text_right_image.html.haml
@@ -1,4 +1,4 @@
-.tn-tc-left-text-right-image.tn-tc-image-and-text
+.tn-tc-row.tn-tc-left-text-right-image.tn-tc-image-and-text
   - row.pieces.each do |piece|
     - if piece.piece_type == "Text"
       .tn-tc-piece{class: piece.size}
