--- a/app/views/tenon/tenon_content/row_types/display/_three_column_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_three_column_image.html.haml
@@ -1,4 +1,4 @@
-.three-column-image
+.tn-tc-row.tn-tc-three-column-image
   - row.pieces.each do |piece|
     .tn-tc-piece.tn-tc-asset-field.four{class: cycle('', '', 'omega')}
       = render "tenon/tenon_content/piece_types/display/image", piece: piece
