--- a/app/views/tenon/tenon_content/row_types/display/_three_column_image_and_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_three_column_image_and_text.html.haml
@@ -1,4 +1,4 @@
-.three-column-image-and-text.stacked-image-and-text
+.tn-tc-row.tn-tc-three-column-image-and-text.stacked-image-and-text
   -[[0,1], [2,3], [4,5]].each do |positions|
     .four{class: cycle('', '', 'omega')}
       - row.pieces.select { |p| positions.include?(p.position) }.each do |piece|
