--- a/app/assets/stylesheets/tenon/layout/main-nav.css.scss
+++ b/app/assets/stylesheets/tenon/layout/main-nav.css.scss
@@ -1,5 +1,5 @@
 .nav-holder {
-  @include media($mobile-breakpoint) {
+  @include media($tn-bp-mobile) {
     @include transition(left 0.2s ease);
     left: -100%;
     display: block;
@@ -15,7 +15,7 @@
     }
   }
 
-  @include media($tablet-breakpoint) {
+  @include media($tn-bp-tablet) {
     @include transition(width 0.2s ease);
     left: 0;
     &.open {
@@ -30,7 +30,7 @@
   width: 60px;
   height: 100%;
   nav.main-nav {
-    @include media($mobile-breakpoint) {
+    @include media($tn-bp-mobile) {
       padding-bottom: 50px;
     }
     overflow: hidden;
@@ -104,7 +104,7 @@
 
 .page-wrap {
   @include transition(margin-left 0.2s ease);
-  @include media($mobile-breakpoint) {
+  @include media($tn-bp-mobile) {
     margin-left: 0;
   }
 
@@ -116,7 +116,7 @@
 
 .menu-open {
   .page-wrap {
-    @include media($mobile-breakpoint) {
+    @include media($tn-bp-mobile) {
       margin-left: 0;
     }
 
