--- a/app/assets/stylesheets/tenon/ui/forms.css.scss
+++ b/app/assets/stylesheets/tenon/ui/forms.css.scss
@@ -72,7 +72,7 @@ input[type=text], input[type=password], input[type=email] {
 
   .content, .form-group {
 
-    @include media($mobile-breakpoint) {
+    @include media($tn-bp-mobile) {
 
       button {
         margin-bottom: 5px;
