rollback some of the front end tn-tc class namespacing for legacy installs

--- a/app/views/tenon/tenon_content/row_types/display/_six_column_image.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_six_column_image.html.haml
@@ -1,4 +1,4 @@
-.tn-tc-row.tn-tc-six-column-image
+.tn-tc-row.six-column-image
   - [ [0, 1], [2, 3], [4, 5] ].each_with_index do |columns, i|
     .tn-tc-piece.four{class: i == 2 ? 'omega' : ''}
       - columns.each do |position|
