--- a/app/views/tenon/tenon_content/row_types/display/_left_image_right_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_left_image_right_text.html.haml
@@ -1,4 +1,4 @@
-.tn-tc-row.tn-tc-left-image-right-text.tn-tc-image-and-text
+.tn-tc-row.left-image-right-text.image-and-text
   - row.pieces.each do |piece|
     - if piece.piece_type == "Image"
       .tn-tc-piece.tn-tc-asset-field{:class => piece.size}
