--- a/app/views/tenon/tenon_content/row_types/display/_right_wrapped_image_with_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_right_wrapped_image_with_text.html.haml
@@ -1,4 +1,4 @@
-.tn-tc-row.tn-tc-right-wrapped-image-with-text.tn-tc-wrapped-image-with-text
+.tn-tc-row.right-wrapped-image-with-text.wrapped-image-with-text
   .twelve
     - row.pieces.each do |piece|
       - if piece.piece_type == "Image"
