--- a/app/views/tenon/tenon_content/row_types/display/_two_column_text.html.haml
+++ b/app/views/tenon/tenon_content/row_types/display/_two_column_text.html.haml
@@ -1,4 +1,4 @@
-.tn-tc-row.tn-tc-two-column-text
+.tn-tc-row.two-column-text
   - row.pieces.each do |piece|
     .tn-tc-piece.six{class: cycle('', 'omega')}
       = render "tenon/tenon_content/piece_types/display/text", piece: piece
