prevent double-cliking on Save buttons by adding { data: { disable_with: } } to them, and the scaffold generators

--- a/app/views/tenon/pages/_form.html.haml
+++ b/app/views/tenon/pages/_form.html.haml
@@ -44,7 +44,7 @@
 
       .row.content
         - if can?(:publish, @page)
-          %button.btn.btn-comp.btn-block.submit Save
+          %button.btn.btn-comp.btn-block.submit{ data: { disable_with: "Please wait..." } } Save
 
         - if can?(:create, Tenon::ItemVersion)
           = save_draft_button(@page)
