--- a/app/views/tenon/post_categories/_form.html.haml
+++ b/app/views/tenon/post_categories/_form.html.haml
@@ -8,4 +8,4 @@
       .spacer
 
   .modal-footer
-    = f.submit "Save", class: 'btn btn-comp'
+    = f.submit "Save", class: 'btn btn-comp', data: { disable_with: "Please wait..." }
