--- a/app/views/tenon/settings/show.html.haml
+++ b/app/views/tenon/settings/show.html.haml
@@ -27,5 +27,5 @@
       %h4.box-label Actions
       .box
         .content
-          %button.btn.btn-primary.btn-block.submit Save
+          %button.btn.btn-primary.btn-block.submit{ data: { disable_with: "Please wait..." } } Save
 
