--- a/app/views/tenon/assets/edit.html.haml
+++ b/app/views/tenon/assets/edit.html.haml
@@ -9,4 +9,4 @@
       .spacer
 
   .modal-footer
-    = f.submit "Save", class: 'btn btn-comp'
+    = f.submit "Save", class: 'btn btn-comp', data: { disable_with: "Please wait..." }
