--- a/app/views/tenon/events/_form.html.haml
+++ b/app/views/tenon/events/_form.html.haml
@@ -30,7 +30,7 @@
 
       .row.content
         - if can?(:publish, @event)
-          %button.btn.btn-comp.btn-block.submit Save
+          %button.btn.btn-comp.btn-block.submit{ data: { disable_with: "Please wait..." } } Save
         - if can?(:create, Tenon::ItemVersion)
           = save_draft_button(@event)
           .last-autosave
