--- a/app/views/tenon/galleries/_form.html.haml
+++ b/app/views/tenon/galleries/_form.html.haml
@@ -24,7 +24,7 @@
     .box
       .content
         - if can?(:publish, @gallery)
-          = f.submit 'Save', class: 'btn btn-block btn-comp'
+          = f.submit 'Save', class: 'btn btn-block btn-comp', data: { disable_with: "Please wait..." }
 
         - if can?(:create, Tenon::ItemVersion)
           = save_draft_button(@gallery)
