--- a/app/views/tenon/posts/_form.html.haml
+++ b/app/views/tenon/posts/_form.html.haml
@@ -54,7 +54,7 @@
 
       .row.content
         - if can?(:publish, @post)
-          %button.btn.btn-comp.btn-block.submit Save
+          %button.btn.btn-comp.btn-block.submit{ data: { disable_with: "Please wait..." } } Save
 
         - if can?(:create, Tenon::ItemVersion)
           = save_draft_button(@post)
