fix password reset mailer link

--- a/app/views/devise/passwords/edit.html.haml
+++ b/app/views/devise/passwords/edit.html.haml
@@ -8,11 +8,11 @@
 
   .row.bordered
     = f.label :password, class: "font"
-    = f.password_field :password, placeholder: '°°°°°°°°'
+    = f.password_field :password, placeholder: '--'
 
   .row.bordered
     = f.label :password_confirmation, class: "font"
-    = f.password_field :password_confirmation, placeholder: '°°°°°°°°'
+    = f.password_field :password_confirmation, placeholder: '--'
 
   .row.bordered
     = f.submit "Change my password", class: 'btn btn-info'
