--- a/app/views/tenon/posts/index.html.haml
+++ b/app/views/tenon/posts/index.html.haml
@@ -1,3 +1,4 @@
 = react_component 'ResourceIndexRoot',
     title: 'Posts',
-    recordsPath: posts_path(format: 'json')
+    recordsPath: posts_path(format: 'json'),
+    newPath: new_post_path
