--- a/app/views/tenon/events/index.html.haml
+++ b/app/views/tenon/events/index.html.haml
@@ -1,4 +1,5 @@
 = react_component 'ResourceIndexRoot',
     title: 'Events',
     recordsPath: events_path(format: 'json'),
-    newPath: new_event_path
+    newPath: new_event_path,
+    childComponents: { record: 'EventRecord'}
